@@ -2,14 +2,17 @@ package org.folio.dataexp.service.logs;
 
 import static org.folio.dataexp.util.ErrorCode.ERROR_MESSAGE_JSON_CANNOT_BE_CONVERTED_TO_MARC;
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.ArgumentMatchers.isA;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
 import java.util.List;
 import java.util.UUID;
+import lombok.SneakyThrows;
 import net.minidev.json.JSONObject;
 import org.folio.dataexp.domain.dto.ErrorLog;
 import org.folio.dataexp.domain.entity.ErrorLogEntity;
@@ -36,6 +39,7 @@ class ErrorLogServiceTest {
   @Mock private ErrorLogEntityCqlRepository errorLogEntityCqlRepository;
   @Mock private FolioExecutionContext folioExecutionContext;
   @Mock private ConfigurationService configurationService;
+  @Mock private ObjectMapper objectMapper;
   @InjectMocks private ErrorLogService errorLogService;
 
   @Test
@@ -82,11 +86,11 @@ class ErrorLogServiceTest {
     var errorLog = new ErrorLog();
 
     when(folioExecutionContext.getUserId()).thenReturn(UUID.randomUUID());
-    when(errorLogEntityCqlRepository.save(isA(ErrorLogEntity.class)))
-        .thenReturn(new ErrorLogEntity());
     errorLogService.save(errorLog);
 
-    verify(errorLogEntityCqlRepository).save(isA(ErrorLogEntity.class));
+    verify(errorLogEntityCqlRepository)
+        .insertIfNotExists(
+            isA(UUID.class), any(), isA(java.util.Date.class), isA(String.class), any());
   }
 
   @Test
@@ -94,11 +98,11 @@ class ErrorLogServiceTest {
     var errorLog = new ErrorLog();
 
     when(folioExecutionContext.getUserId()).thenReturn(UUID.randomUUID());
-    when(errorLogEntityCqlRepository.save(isA(ErrorLogEntity.class)))
-        .thenReturn(new ErrorLogEntity());
     errorLogService.save(errorLog);
 
-    verify(errorLogEntityCqlRepository).save(isA(ErrorLogEntity.class));
+    verify(errorLogEntityCqlRepository)
+        .insertIfNotExists(
+            isA(UUID.class), any(), isA(java.util.Date.class), isA(String.class), any());
   }
 
   @Test
@@ -111,14 +115,15 @@ class ErrorLogServiceTest {
   void saveGeneralErrorTest() {
 
     when(folioExecutionContext.getUserId()).thenReturn(UUID.randomUUID());
-    when(errorLogEntityCqlRepository.save(isA(ErrorLogEntity.class)))
-        .thenReturn(new ErrorLogEntity());
     errorLogService.saveGeneralError("errorCode", UUID.randomUUID());
 
-    verify(errorLogEntityCqlRepository).save(isA(ErrorLogEntity.class));
+    verify(errorLogEntityCqlRepository)
+        .insertIfNotExists(
+            isA(UUID.class), any(), isA(java.util.Date.class), isA(String.class), isA(UUID.class));
   }
 
   @Test
+  @SneakyThrows
   void saveCommonExportFailsErrorsTest() {
     var commonFails = new CommonExportStatistic();
     var notExistUuid = UUID.randomUUID();
@@ -127,75 +132,114 @@ class ErrorLogServiceTest {
     commonFails.addToNotExistUuidAll(List.of(notExistUuid));
 
     when(folioExecutionContext.getUserId()).thenReturn(UUID.randomUUID());
-    when(errorLogEntityCqlRepository.save(isA(ErrorLogEntity.class)))
-        .thenReturn(new ErrorLogEntity());
+    when(objectMapper.writeValueAsString(isA(ErrorLog.class))).thenReturn("jsonString");
 
     var jobExecutionId = UUID.randomUUID();
     errorLogService.saveCommonExportFailsErrors(commonFails, 3, jobExecutionId);
-    verify(errorLogEntityCqlRepository, times(3)).save(isA(ErrorLogEntity.class));
+    verify(errorLogEntityCqlRepository, times(3))
+        .insertIfNotExists(
+            isA(UUID.class),
+            isA(String.class),
+            isA(java.util.Date.class),
+            isA(String.class),
+            isA(UUID.class));
   }
 
   @Test
+  @SneakyThrows
   void saveFailedToReadInputFileErrorTest() {
-    var jobExecutionId = UUID.randomUUID();
 
     when(folioExecutionContext.getUserId()).thenReturn(UUID.randomUUID());
-    when(errorLogEntityCqlRepository.save(isA(ErrorLogEntity.class)))
-        .thenReturn(new ErrorLogEntity());
 
+    // Mock objectMapper.readValue to return a non-null ErrorLog
+    var expectedErrorLog = new ErrorLog();
+    expectedErrorLog.setErrorMessageCode(ErrorCode.ERROR_READING_FROM_INPUT_FILE.getCode());
+    when(objectMapper.readValue(any(String.class), eq(ErrorLog.class)))
+        .thenReturn(expectedErrorLog);
+    when(objectMapper.writeValueAsString(isA(ErrorLog.class))).thenReturn("jsonString");
+
+    var jobExecutionId = UUID.randomUUID();
     errorLogService.saveFailedToReadInputFileError(jobExecutionId);
-    ArgumentCaptor<ErrorLogEntity> captor = ArgumentCaptor.forClass(ErrorLogEntity.class);
-    verify(errorLogEntityCqlRepository).save(captor.capture());
+    ArgumentCaptor<String> captor = ArgumentCaptor.forClass(String.class);
+    verify(errorLogEntityCqlRepository)
+        .insertIfNotExists(
+            isA(UUID.class),
+            captor.capture(),
+            isA(java.util.Date.class),
+            isA(String.class),
+            isA(UUID.class));
 
-    var errorLogEntity = captor.getValue();
-    var errorLog = errorLogEntity.getErrorLog();
+    var errorLog = objectMapper.readValue(captor.getValue(), ErrorLog.class);
     assertEquals(ErrorCode.ERROR_READING_FROM_INPUT_FILE.getCode(), errorLog.getErrorMessageCode());
   }
 
   @Test
+  @SneakyThrows
   void saveWithAffectedRecordMarcExceptionErrorTest() {
-    var jobExecutionId = UUID.randomUUID();
 
     when(folioExecutionContext.getUserId()).thenReturn(UUID.randomUUID());
-    when(errorLogEntityCqlRepository.save(isA(ErrorLogEntity.class)))
-        .thenReturn(new ErrorLogEntity());
 
+    // Mock objectMapper.readValue to return a non-null ErrorLog
+    var expectedErrorLog = new ErrorLog();
+    expectedErrorLog.setErrorMessageCode(ERROR_MESSAGE_JSON_CANNOT_BE_CONVERTED_TO_MARC.getCode());
+    when(objectMapper.readValue(any(String.class), eq(ErrorLog.class)))
+        .thenReturn(expectedErrorLog);
+    when(objectMapper.writeValueAsString(isA(ErrorLog.class))).thenReturn("jsonString");
+
+    var jobExecutionId = UUID.randomUUID();
     errorLogService.saveWithAffectedRecord(
         new JSONObject(),
         ERROR_MESSAGE_JSON_CANNOT_BE_CONVERTED_TO_MARC.getCode(),
         jobExecutionId,
         new MarcException());
-    ArgumentCaptor<ErrorLogEntity> captor = ArgumentCaptor.forClass(ErrorLogEntity.class);
-    verify(errorLogEntityCqlRepository).save(captor.capture());
+    ArgumentCaptor<String> captor = ArgumentCaptor.forClass(String.class);
+    verify(errorLogEntityCqlRepository)
+        .insertIfNotExists(
+            isA(UUID.class),
+            captor.capture(),
+            isA(java.util.Date.class),
+            isA(String.class),
+            isA(UUID.class));
 
-    var errorLogEntity = captor.getValue();
-    var errorLog = errorLogEntity.getErrorLog();
+    var errorLog = objectMapper.readValue(captor.getValue(), ErrorLog.class);
     assertEquals(
         ErrorCode.ERROR_MESSAGE_JSON_CANNOT_BE_CONVERTED_TO_MARC.getCode(),
         errorLog.getErrorMessageCode());
   }
 
   @Test
+  @SneakyThrows
   void saveWithAffectedRecordErrorTest() {
-    var jobExecutionId = UUID.randomUUID();
 
     when(folioExecutionContext.getUserId()).thenReturn(UUID.randomUUID());
-    when(errorLogEntityCqlRepository.save(isA(ErrorLogEntity.class)))
-        .thenReturn(new ErrorLogEntity());
 
+    // Mock objectMapper.readValue to return a non-null ErrorLog
+    var expectedErrorLog = new ErrorLog();
+    expectedErrorLog.setErrorMessageCode(ERROR_MESSAGE_JSON_CANNOT_BE_CONVERTED_TO_MARC.getCode());
+    expectedErrorLog.setErrorMessageValues(List.of(LONG_MARC_RECORD_MESSAGE));
+    when(objectMapper.readValue(any(String.class), eq(ErrorLog.class)))
+        .thenReturn(expectedErrorLog);
+    when(objectMapper.writeValueAsString(isA(ErrorLog.class))).thenReturn("jsonString");
+
+    var jobExecutionId = UUID.randomUUID();
     errorLogService.saveWithAffectedRecord(
         new JSONObject(),
         LONG_MARC_RECORD_MESSAGE,
         ERROR_MESSAGE_JSON_CANNOT_BE_CONVERTED_TO_MARC.getCode(),
         jobExecutionId);
-    ArgumentCaptor<ErrorLogEntity> captor = ArgumentCaptor.forClass(ErrorLogEntity.class);
-    verify(errorLogEntityCqlRepository).save(captor.capture());
+    ArgumentCaptor<String> captor = ArgumentCaptor.forClass(String.class);
+    verify(errorLogEntityCqlRepository)
+        .insertIfNotExists(
+            isA(UUID.class),
+            captor.capture(),
+            isA(java.util.Date.class),
+            isA(String.class),
+            isA(UUID.class));
 
-    var errorLogEntity = captor.getValue();
-    var errorLog = errorLogEntity.getErrorLog();
+    var errorLog = objectMapper.readValue(captor.getValue(), ErrorLog.class);
     assertEquals(
         ErrorCode.ERROR_MESSAGE_JSON_CANNOT_BE_CONVERTED_TO_MARC.getCode(),
         errorLog.getErrorMessageCode());
-    assertEquals(LONG_MARC_RECORD_MESSAGE, errorLog.getErrorMessageValues().get(0));
+    assertEquals(LONG_MARC_RECORD_MESSAGE, errorLog.getErrorMessageValues().getFirst());
   }
 }
